{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 56,
  "lineage": "b5062743-d7c5-ad1e-163e-a2f8beeca22c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a6daec1a8e5db6fa",
            "domain": "vpc",
            "id": "eipalloc-09dd6ca4ec3a2ca88",
            "network_interface": "eni-0207fe7fef913f08d",
            "private_dns": "ip-10-86-118-206.ec2.internal",
            "private_ip": "10.86.118.206",
            "public_dns": "ec2-54-237-118-104.compute-1.amazonaws.com",
            "public_ip": "54.237.118.104",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:internet-gateway/igw-05518beadccf6020f",
            "id": "igw-05518beadccf6020f",
            "owner_id": "784579436685",
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dd6ca4ec3a2ca88",
            "id": "nat-0577288446a50b6a0",
            "network_interface_id": "eni-0207fe7fef913f08d",
            "private_ip": "10.86.118.206",
            "public_ip": "54.237.118.104",
            "subnet_id": "subnet-0d30a3ffe7d13d234"
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_internet_gateway.ig",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c36a2caa95b1b4e41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0577288446a50b6a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c36a2caa95b1b4e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.ngw-1a",
            "aws_route_table.private-1a",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b52c2169caa6c1b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0577288446a50b6a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b52c2169caa6c1b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.ngw-1a",
            "aws_route_table.private-1b",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c532a8425f86fb941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0577288446a50b6a0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c532a8425f86fb94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.ngw-1a",
            "aws_route_table.private-1c",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05518beadccf6020f",
            "id": "r-rtb-0007d66a1e15deab11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0007d66a1e15deab1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c36a2caa95b1b4e4",
            "owner_id": "784579436685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0577288446a50b6a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07b52c2169caa6c1b",
            "owner_id": "784579436685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0577288446a50b6a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c532a8425f86fb94",
            "owner_id": "784579436685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0577288446a50b6a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0007d66a1e15deab1",
            "owner_id": "784579436685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05518beadccf6020f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad150abb99bd370",
            "route_table_id": "rtb-0c36a2caa95b1b4e4",
            "subnet_id": "subnet-00ad59d5a0f5eeacb"
          },
          "dependencies": [
            "aws_route_table.private-1a",
            "aws_subnet.private-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97c177d77e2b58f",
            "route_table_id": "rtb-07b52c2169caa6c1b",
            "subnet_id": "subnet-06eec0adf3b471f0b"
          },
          "dependencies": [
            "aws_route_table.private-1b",
            "aws_subnet.private-1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fdf80088639bcf0",
            "route_table_id": "rtb-0c532a8425f86fb94",
            "subnet_id": "subnet-0c8846bbb998416ec"
          },
          "dependencies": [
            "aws_route_table.private-1c",
            "aws_subnet.private-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8da099b261fbc3b",
            "route_table_id": "rtb-0007d66a1e15deab1",
            "subnet_id": "subnet-0d30a3ffe7d13d234"
          },
          "dependencies": [
            "aws_route_table.public-1a",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:security-group/sg-071cd879658506d3b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ECS In",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-071cd879658506d3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ECS Out",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_demo",
            "name_prefix": null,
            "owner_id": "784579436685",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Assignment_ecs_egress-out-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ECS In",
            "from_port": 80,
            "id": "sgrule-3608243969",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-071cd879658506d3b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.this",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Assignment_ecs_ingress-in-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ECS Out",
            "from_port": 80,
            "id": "sgrule-4124181165",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-071cd879658506d3b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.this",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:subnet/subnet-00ad59d5a0f5eeacb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.86.118.0/26",
            "id": "subnet-00ad59d5a0f5eeacb",
            "map_public_ip_on_launch": false,
            "owner_id": "784579436685",
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:subnet/subnet-06eec0adf3b471f0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.86.118.64/26",
            "id": "subnet-06eec0adf3b471f0b",
            "map_public_ip_on_launch": false,
            "owner_id": "784579436685",
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:subnet/subnet-0c8846bbb998416ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.86.118.128/28",
            "id": "subnet-0c8846bbb998416ec",
            "map_public_ip_on_launch": false,
            "owner_id": "784579436685",
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:subnet/subnet-0d30a3ffe7d13d234",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.86.118.192/27",
            "id": "subnet-0d30a3ffe7d13d234",
            "map_public_ip_on_launch": true,
            "owner_id": "784579436685",
            "vpc_id": "vpc-05d749ca7c751c6c1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784579436685:vpc/vpc-05d749ca7c751c6c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.86.118.0/24",
            "default_network_acl_id": "acl-0e837dd6d3231d571",
            "default_route_table_id": "rtb-0bd0efae9b363014b",
            "default_security_group_id": "sg-0c92df878a62cdeb2",
            "dhcp_options_id": "dopt-9c4e59e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05d749ca7c751c6c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd0efae9b363014b",
            "owner_id": "784579436685"
          }
        }
      ]
    }
  ]
}